@@ -1,4 +1,4 @@
 DIST gtklife-5.1.tar.gz 809542 RMD160 ad565e98aa622de4a3392add1271ad90209ff17e SHA1 a23aaccaaa327e40cb2fd025d5bbcdcd07dc669e SHA256 fcf5a6515595d1822291fd6da4fec93dcfb5162cfce48445686ba73ab4a98191
-EBUILD gtklife-5.1.ebuild 887 RMD160 eef11003c19f9fc1f73f91df540b8078f24e6f04 SHA1 2829e32b42dc0664d9f59fd4c3935aed2f534320 SHA256 4ae4ba8c17e96d70842ae3fd3d7e33bafc86db7da52edc2df6096d3992701148
-MISC ChangeLog 1588 RMD160 c5d224077aa3a1b708fcee37eb0660e4397343c0 SHA1 4897c9f0ca122d698fab45788830b990d9e40a90 SHA256 c74afab9b4932c5a1f4844e9176701fc0076b702383be0e46616c682070c3344
+EBUILD gtklife-5.1.ebuild 933 RMD160 00c49851d77d51716b53a67d7fd2b42d1f47c1e2 SHA1 2a8bd9b38d5ff4dabe8c94066e9446b3fce501d0 SHA256 a1fc64a87195f99d57d57f7b76c59a214a71e8d93478f5392513e1ba9af44107
+MISC ChangeLog 1694 RMD160 5537fe077d4c48b72ff4914699ad8f825381e9e1 SHA1 be93ae1dfff9fc4e1e027231827d91c09896927e SHA256 8b7859bd25a3097d37c34581a3330b11b1b1a80d4ac66f08e8f5c2af30c188f8
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
